--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-composer.phar
-/vendor/
-
-# Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
-# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
-# composer.lock
+.phpunit.cache/
+.phpunit.result.cache
+vendor/
+composer.lock
+lib/WebAuthn/restena.php
+phpunit.xml.bak
+nbproject/
